--- a/my-website/index.html
+++ b/my-website/index.html
@@ -43,7 +43,7 @@
     <div class="modal-content">
       <span class="close" onclick="closeModal()" style="color: red;">&times;</span>
       <div class="modal-body">
-  <img id="modal-image" src="" alt="" />
+  <img src="images/chillflix-logo.png" alt="Chillflix Logo" width="200">
   <div class="modal-text">
     <h2 id="modal-title"></h2>
     <div class="stars" id="modal-rating"></div>
