--- a/my-website/index.html
+++ b/my-website/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <div class="navbar">
-    <!DOCTYPE html>
+    <img src="logo.png" alt="CHILLFLIX" />
 <html lang="en">
 <head>
   <meta charset="UTF-8">
