--- a/my-website/index.html
+++ b/my-website/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <div class="navbar">
-    <img src="logo.png" alt="CHILLFLIX" />
+    <img src="https://raw.githubusercontent.com/username/repo-name/main/assets/logo.png" alt="Chillflix Logo" width="150" />
 <html lang="en">
 <head>
   <meta charset="UTF-8">
