--- a/my-website/index.html
+++ b/my-website/index.html
@@ -13,7 +13,8 @@
 
 <body>
   <div class="navbar">
-    <img src="logo.png" alt="LOGO HERE" />
+    <img src="https://raw.githubusercontent.com/YOUR_USERNAME/YOUR_REPO/main/chillflix-logo.png" alt="Chillflix Logo" width="200">
+
     <div class="nav-links">
       <a href="index.html">Home</a>
       <input type="text" class="search-bar" placeholder="Search..." onfocus="openSearchModal()" />
