--- a/my-website/index.html
+++ b/my-website/index.html
@@ -1,8 +1,9 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>My Website</title>
+  <title>ChillFlix</title>
   <link rel="stylesheet" href="css/home.css">
   <link rel="preload" href="css/home.css" as="style">
   <link rel="preload" href="js/home.js" as="script">
@@ -13,8 +14,9 @@
 
 <body>
   <div class="navbar">
-    <img src="https://raw.githubusercontent.com/YOUR_USERNAME/YOUR_REPO/main/chillflix-logo.png" alt="Chillflix Logo" width="200">
-
+    <!-- GitHub-hosted logo -->
+    <img src="https://raw.githubusercontent.com/YOUR_USERNAME/YOUR_REPO/BRANCH/chillflix-logo.png" alt="Chillflix Logo" style="height: 60px; border-radius: 8px;" />
+    
     <div class="nav-links">
       <a href="index.html">Home</a>
       <input type="text" class="search-bar" placeholder="Search..." onfocus="openSearchModal()" />
@@ -22,7 +24,7 @@
   </div>
 
   <div class="banner" id="banner">
-    <h1 id="banner-title"></h1>
+    <h1 id="banner-title">Welcome to ChillFlix</h1>
   </div>
 
   <div class="row">
@@ -44,14 +46,14 @@
     <div class="modal-content">
       <span class="close" onclick="closeModal()" style="color: red;">&times;</span>
       <div class="modal-body">
-  <img id="modal-image" src="" alt="" />
-  <div class="modal-text">
-    <h2 id="modal-title"></h2>
-    <div class="stars" id="modal-rating"></div>
-    <p id="modal-description"></p>
-  </div>
-</div>
-      
+        <img id="modal-image" src="" alt="" />
+        <div class="modal-text">
+          <h2 id="modal-title"></h2>
+          <div class="stars" id="modal-rating"></div>
+          <p id="modal-description"></p>
+        </div>
+      </div>
+
       <div class="server-selector">
         <label for="server">Change Server:</label>
         <select id="server" onchange="changeServer()">
@@ -60,6 +62,7 @@
           <option value="player.videasy.net">Player.Videasy.net</option>
         </select>
       </div>
+
       <iframe id="modal-video" width="100%" height="315" frameborder="0" allowfullscreen></iframe>
     </div>
   </div>
@@ -70,16 +73,15 @@
     <div class="results" id="search-results"></div>
   </div>
 
-<footer class="footer">
-  <div class="footer-content">
-    <p>&copy; 2025 My Website. All rights reserved.</p>
-    <div class="footer-links">
-      <a href="#">Disclaimer</a>
-      <a href="#">About Us</a>
-      <a href="#">Contact Us</a>
+  <footer class="footer">
+    <div class="footer-content">
+      <p>&copy; 2025 ChillFlix. All rights reserved.</p>
+      <div class="footer-links">
+        <a href="#">Disclaimer</a>
+        <a href="#">About Us</a>
+        <a href="#">Contact Us</a>
+      </div>
     </div>
-  </div>
-</footer>
-
-  
+  </footer>
 </body>
+</html>
