--- a/my-website/index.html
+++ b/my-website/index.html
@@ -4,18 +4,22 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>ChillFlix</title>
+
+  <!-- Styles and Icons -->
   <link rel="stylesheet" href="css/home.css">
   <link rel="preload" href="css/home.css" as="style">
   <link rel="preload" href="js/home.js" as="script">
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
+  <!-- JS -->
   <script defer src="js/home.js"></script>
 </head>
 
 <body>
   <div class="navbar">
-    <!-- GitHub-hosted logo -->
-    <img src="https://raw.githubusercontent.com/YOUR_USERNAME/YOUR_REPO/BRANCH/chillflix-logo.png" alt="Chillflix Logo" style="height: 60px; border-radius: 8px;" />
+    <!-- 🔁 Replace the src URL below with your actual GitHub path -->
+    <img src="https://raw.githubusercontent.com/YOUR_USERNAME/YOUR_REPO/main/chillflix-logo.png" alt="Chillflix Logo" style="height: 60px; border-radius: 8px;" />
     
     <div class="nav-links">
       <a href="index.html">Home</a>
