--- a/my-website/index.html
+++ b/my-website/index.html
@@ -11,15 +11,13 @@
   <link rel="preload" href="js/home.js" as="script">
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-
-  <!-- JS -->
   <script defer src="js/home.js"></script>
 </head>
 
 <body>
   <div class="navbar">
-    <!-- 🔁 Replace the src URL below with your actual GitHub path -->
-    <img src="https://raw.githubusercontent.com/YOUR_USERNAME/YOUR_REPO/main/chillflix-logo.png" alt="Chillflix Logo" style="height: 60px; border-radius: 8px;" />
+    <!-- ✅ Working GitHub logo URL -->
+    <img src="https://raw.githubusercontent.com/geezmoww/chillflix/main/my-website/chillflix-logo.png" alt="Chillflix Logo" style="height: 60px; border-radius: 8px;" />
     
     <div class="nav-links">
       <a href="index.html">Home</a>
@@ -89,3 +87,4 @@
   </footer>
 </body>
 </html>
+
