--- a/my-website/index.html
+++ b/my-website/index.html
@@ -17,7 +17,7 @@
 <body>
   <div class="navbar">
     <!-- ✅ Working GitHub logo URL -->
-    <img src="https://raw.githubusercontent.com/geezmoww/chillflix/main/my-website/chillflix-logo.png" alt="Chillflix" style="height: 60px; border-radius: 8px;" />
+    <img src="https://raw.githubusercontent.com/geezmoww/chillflix/main/my-website/chillflix-logo.png" alt="ChillFlix" style="height: 60px;" />
 
     
     <div class="nav-links">
