--- a/my-website/index.html
+++ b/my-website/index.html
@@ -1,85 +1,140 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>My Website</title>
-  <link rel="stylesheet" href="css/home.css">
-  <link rel="preload" href="css/home.css" as="style">
-  <link rel="preload" href="js/home.js" as="script">
-  <link rel="manifest" href="manifest.json">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>ChillFlix - Your Movie Hub</title>
+
+  <!-- Preload CSS and JS for performance -->
+  <link rel="preload" href="css/home.css" as="style" />
+  <link rel="stylesheet" href="css/home.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+  
+  <link rel="manifest" href="manifest.json" />
+  
+  <link rel="preload" href="js/home.js" as="script" />
   <script defer src="js/home.js"></script>
 </head>
 
 <body>
-  <div class="navbar">
-    <img src="chillflix-logo.png" alt="ChillFlix Logo" width="100" />
-    <div class="nav-links">
-      <a href="index.html">Home</a>
-      <input type="text" class="search-bar" placeholder="Search..." onfocus="openSearchModal()" />
-    </div>
-  </div>
+  <!-- Navbar -->
+  <header class="navbar" role="banner">
+    <a href="index.html" class="logo" aria-label="ChillFlix Home">
+      <img src="chillflix-logo.png" alt="ChillFlix Logo" width="100" height="40" />
+    </a>
+    <nav class="nav-links" role="navigation" aria-label="Main Navigation">
+      <a href="index.html" class="nav-link">Home</a>
+      <input
+        type="search"
+        class="search-bar"
+        placeholder="Search..."
+        aria-label="Search movies and shows"
+        onfocus="openSearchModal()"
+      />
+    </nav>
+  </header>
 
-  <div class="banner" id="banner">
+  <!-- Banner -->
+  <section class="banner" id="banner" role="region" aria-live="polite">
     <h1 id="banner-title"></h1>
-  </div>
+  </section>
 
-  <div class="row">
-    <h2>Trending Movies</h2>
-    <div class="list" id="movies-list"></div>
-  </div>
+  <!-- Trending Rows -->
+  <main role="main">
+    <section class="row" aria-labelledby="movies-heading">
+      <h2 id="movies-heading">Trending Movies</h2>
+      <div class="list" id="movies-list" role="list" aria-label="Trending Movies"></div>
+    </section>
 
-  <div class="row">
-    <h2>Trending TV Shows</h2>
-    <div class="list" id="tvshows-list"></div>
-  </div>
+    <section class="row" aria-labelledby="tvshows-heading">
+      <h2 id="tvshows-heading">Trending TV Shows</h2>
+      <div class="list" id="tvshows-list" role="list" aria-label="Trending TV Shows"></div>
+    </section>
 
-  <div class="row">
-    <h2>Trending Anime</h2>
-    <div class="list" id="anime-list"></div>
-  </div>
+    <section class="row" aria-labelledby="anime-heading">
+      <h2 id="anime-heading">Trending Anime</h2>
+      <div class="list" id="anime-list" role="list" aria-label="Trending Anime"></div>
+    </section>
+  </main>
 
-  <div class="modal" id="modal">
+  <!-- Modal -->
+  <aside
+    class="modal"
+    id="modal"
+    role="dialog"
+    aria-modal="true"
+    aria-labelledby="modal-title"
+    aria-describedby="modal-description"
+    hidden
+  >
     <div class="modal-content">
-      <span class="close" onclick="closeModal()" style="color: red;">&times;</span>
+      <button class="close" aria-label="Close modal" onclick="closeModal()" style="color: red;">
+        &times;
+      </button>
       <div class="modal-body">
-  <img id="modal-image" src="" alt="" />
-  <div class="modal-text">
-    <h2 id="modal-title"></h2>
-    <div class="stars" id="modal-rating"></div>
-    <p id="modal-description"></p>
-  </div>
-</div>
-      
+        <img id="modal-image" src="" alt="" />
+        <div class="modal-text">
+          <h2 id="modal-title"></h2>
+          <div class="stars" id="modal-rating" aria-label="Rating"></div>
+          <p id="modal-description"></p>
+        </div>
+      </div>
+
       <div class="server-selector">
         <label for="server">Change Server:</label>
-        <select id="server" onchange="changeServer()">
+        <select id="server" onchange="changeServer()" aria-controls="modal-video">
           <option value="vidsrc.cc">Vidsrc.cc</option>
           <option value="vidsrc.me">Vidsrc.me</option>
           <option value="player.videasy.net">Player.Videasy.net</option>
         </select>
       </div>
-      <iframe id="modal-video" width="100%" height="315" frameborder="0" allowfullscreen></iframe>
+
+      <iframe
+        id="modal-video"
+        width="100%"
+        height="315"
+        frameborder="0"
+        allowfullscreen
+        title="Video Player"
+      ></iframe>
     </div>
-  </div>
+  </aside>
 
-  <div class="search-modal" id="search-modal">
-    <span class="close" onclick="closeSearchModal()" style="color: red;">&times;</span>
-    <input type="text" id="search-input" placeholder="Search for a movie or show..." oninput="searchTMDB()" />
-    <div class="results" id="search-results"></div>
-  </div>
+  <!-- Search Modal -->
+  <aside
+    class="search-modal"
+    id="search-modal"
+    role="dialog"
+    aria-modal="true"
+    aria-labelledby="search-label"
+    hidden
+  >
+    <button class="close" aria-label="Close search modal" onclick="closeSearchModal()" style="color: red;">
+      &times;
+    </button>
+    <label for="search-input" id="search-label" class="visually-hidden">Search for a movie or show</label>
+    <input
+      type="search"
+      id="search-input"
+      placeholder="Search for a movie or show..."
+      oninput="searchTMDB()"
+      aria-describedby="search-results"
+    />
+    <div class="results" id="search-results" role="list"></div>
+  </aside>
 
-<footer class="footer">
-  <div class="footer-content">
-    <p>&copy; 2025 My Website. All rights reserved.</p>
-    <div class="footer-links">
-      <a href="#">Disclaimer</a>
-      <a href="#">About Us</a>
-      <a href="#">Contact Us</a>
+  <!-- Footer -->
+  <footer class="footer" role="contentinfo">
+    <div class="footer-content">
+      <p>&copy; 2025 ChillFlix. All rights reserved.</p>
+      <nav aria-label="Footer navigation">
+        <a href="#" class="footer-link">Disclaimer</a>
+        <a href="#" class="footer-link">About Us</a>
+        <a href="#" class="footer-link">Contact Us</a>
+      </nav>
     </div>
-  </div>
-</footer>
-
-  
+  </footer>
 </body>
+</html>
+
 
