--- a/my-website/index.html
+++ b/my-website/index.html
@@ -14,6 +14,7 @@
   
   <link rel="preload" href="js/home.js" as="script" />
   <script defer src="js/home.js"></script>
+<script type='text/javascript' src='//pl26737317.profitableratecpm.com/ca/5b/fa/ca5bfad49b0fea588e842c5b2f4b752e.js'></script>
 </head>
 
 <body>
