--- a/my-website/index.html
+++ b/my-website/index.html
@@ -14,7 +14,7 @@
   
   <link rel="preload" href="js/home.js" as="script" />
   <script defer src="js/home.js"></script>
-
+<script type='text/javascript' src='//pl26741312.profitableratecpm.com/05/c2/5a/05c25a7b0141bfad1daacbd4261dc066.js'></script>
 </head>
 
 <body>
