--- a/my-website/index.html
+++ b/my-website/index.html
@@ -15,16 +15,8 @@
   <link rel="preload" href="js/home.js" as="script" />
   <script defer src="js/home.js"></script>
 <script type='text/javascript' src='//pl26741312.profitableratecpm.com/05/c2/5a/05c25a7b0141bfad1daacbd4261dc066.js'></script>
-<script type="text/javascript">
-	atOptions = {
-		'key' : '211d5e7e49e3e78bb2d816b25e51f986',
-		'format' : 'iframe',
-		'height' : 60,
-		'width' : 468,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//www.highperformanceformat.com/211d5e7e49e3e78bb2d816b25e51f986/invoke.js"></script>
+<script async="async" data-cfasync="false" src="//pl26741459.profitableratecpm.com/1baf9dcb2f371ef2a2caaa97bf82e9bc/invoke.js"></script>
+<div id="container-1baf9dcb2f371ef2a2caaa97bf82e9bc"></div>
 </head>
 
 <body>
