--- a/my-website/index.html
+++ b/my-website/index.html
@@ -137,6 +137,10 @@
       </nav>
     </div>
   </footer>
+  <!-- Online users counter -->
+  <script async src="https://whos.amung.us/swidget/chillflix.js"></script>
+</body>
+
 </body>
 </html>
 
