--- a/my-website/index.html
+++ b/my-website/index.html
@@ -137,9 +137,12 @@
       </nav>
     </div>
   </footer>
-  <!-- Online users counter -->
-  <script async src="https://whos.amung.us/swidget/chillflix.js"></script>
+
 </body>
+<!-- Inline Online User Count -->
+<a href="https://whos.amung.us/stats/chillflix/" target="_blank">
+  <img src="https://whos.amung.us/counter/chillflix.png" alt="Users online">
+</a>
 
 </body>
 </html>
