--- a/my-website/index.html
+++ b/my-website/index.html
@@ -139,61 +139,111 @@
   </footer>
 
 </body>
-<!-- 🌍 ChillFlix Visitor Info Box -->
-<div id="visitor-stats-box" style="
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  background: linear-gradient(135deg, #ff1e56, #1e90ff);
-  color: #fff;
-  padding: 16px 20px;
-  border-radius: 16px;
-  font-family: 'Segoe UI', sans-serif;
-  font-size: 14px;
-  box-shadow: 0 0 16px rgba(255, 0, 70, 0.6), 0 0 16px rgba(30, 144, 255, 0.6);
-  z-index: 9999;
-  display: flex;
-  align-items: center;
-  gap: 14px;
-  animation: pulse 2s infinite;
-">
-  <img src="chillflix-logo.png" alt="ChillFlix Logo" width="30" height="30" style="border-radius: 8px;" />
-  <div id="visitor-stats">
-    Detecting your country...
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>ChillFlix Real-Time Visitors</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+  <style>
+    #visitor-stats-box {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background: linear-gradient(135deg, #ff1e56, #1e90ff);
+      color: #fff;
+      padding: 16px 20px;
+      border-radius: 16px;
+      font-family: 'Segoe UI', sans-serif;
+      font-size: 14px;
+      box-shadow: 0 0 16px rgba(255, 0, 70, 0.6), 0 0 16px rgba(30, 144, 255, 0.6);
+      z-index: 9999;
+      display: flex;
+      align-items: center;
+      gap: 14px;
+      animation: pulse 2s infinite;
+    }
+    #visitor-stats-box img {
+      border-radius: 8px;
+      width: 30px;
+      height: 30px;
+    }
+    @keyframes pulse {
+      0% { box-shadow: 0 0 16px rgba(255, 0, 70, 0.5), 0 0 16px rgba(30, 144, 255, 0.5); }
+      50% { box-shadow: 0 0 24px rgba(255, 0, 70, 0.8), 0 0 24px rgba(30, 144, 255, 0.8); }
+      100% { box-shadow: 0 0 16px rgba(255, 0, 70, 0.5), 0 0 16px rgba(30, 144, 255, 0.5); }
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Visitor Box -->
+  <div id="visitor-stats-box">
+    <img src="chillflix-logo.png" alt="ChillFlix Logo" />
+    <div id="visitor-stats">Detecting your country...</div>
   </div>
-</div>
 
-<!-- 🔤 Font Awesome (for icons, if needed) -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+  <!-- Firebase and visitor tracking script -->
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-app.js";
+    import { getDatabase, ref, set, onValue, push, onDisconnect } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-database.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-analytics.js";
 
-<!-- 🌐 Visitor Country + Simulated Users Script -->
-<script>
-  fetch('https://ipapi.co/json/')
-    .then(response => response.json())
-    .then(data => {
-      const userCountry = data.country_name || "Unknown";
-      const activeUsers = Math.floor(Math.random() * 50) + 5;
-      const activeCountries = Math.floor(activeUsers / 4) + 1;
+    const firebaseConfig = {
+      apiKey: "AIzaSyAkq7n1-B5SU-_8Vmn4mBsx7qlkW9EioFs",
+      authDomain: "chillflixtracker.firebaseapp.com",
+      databaseURL: "https://chillflixtracker-default-rtdb.firebaseio.com",
+      projectId: "chillflixtracker",
+      storageBucket: "chillflixtracker.appspot.com",
+      messagingSenderId: "52011469409",
+      appId: "1:52011469409:web:65e9bf90f82d68cda5b820",
+      measurementId: "G-BP1KSSKVNK"
+    };
 
-      document.getElementById('visitor-stats').innerHTML = `
-        👤 <strong>You</strong> are from <strong>${userCountry}</strong><br>
-        🧑 <strong>${activeUsers}</strong> user${activeUsers !== 1 ? 's' : ''} online<br>
-        🌍 From <strong>${activeCountries}</strong> countr${activeCountries === 1 ? 'y' : 'ies'}
-      `;
-    })
-    .catch(() => {
-      document.getElementById('visitor-stats').textContent = "Could not detect your country.";
-    });
-</script>
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+    const db = getDatabase(app);
 
-<!-- ✨ Optional Animation (glow pulse) -->
-<style>
-@keyframes pulse {
-  0% { box-shadow: 0 0 16px rgba(255, 0, 70, 0.5), 0 0 16px rgba(30, 144, 255, 0.5); }
-  50% { box-shadow: 0 0 24px rgba(255, 0, 70, 0.8), 0 0 24px rgba(30, 144, 255, 0.8); }
-  100% { box-shadow: 0 0 16px rgba(255, 0, 70, 0.5), 0 0 16px rgba(30, 144, 255, 0.5); }
-}
-</style>
+    async function trackVisitor() {
+      try {
+        // Fetch user country from ipapi
+        const response = await fetch('https://ipapi.co/json/');
+        const data = await response.json();
+        const country = data.country_name || 'Unknown';
+
+        // Add user to Firebase Realtime Database
+        const userRef = push(ref(db, 'activeUsers'));
+        await set(userRef, {
+          country: country,
+          timestamp: Date.now()
+        });
+
+        // Remove user when they disconnect/leave page
+        onDisconnect(userRef).remove();
+
+        // Listen for all active users
+        onValue(ref(db, 'activeUsers'), (snapshot) => {
+          const users = snapshot.val() || {};
+          const totalUsers = Object.keys(users).length;
+          const countries = new Set(Object.values(users).map(u => u.country));
+
+          document.getElementById('visitor-stats').innerHTML = `
+            👤 <strong>You</strong> are from <strong>${country}</strong><br>
+            🧑 <strong>${totalUsers}</strong> user${totalUsers !== 1 ? 's' : ''} online<br>
+            🌍 From <strong>${countries.size}</strong> countr${countries.size !== 1 ? 'ies' : 'y'}
+          `;
+        });
+      } catch (error) {
+        document.getElementById('visitor-stats').textContent = "Could not detect your country.";
+        console.error("Visitor tracking error:", error);
+      }
+    }
+
+    trackVisitor();
+  </script>
+</body>
+</html>
 
 </body>
 </html>
