--- a/my-website/index.html
+++ b/my-website/index.html
@@ -137,7 +137,7 @@
       </nav>
     </div>
   </footer>
-</body>
+<body>
 <!-- 🌍 ChillFlix Visitor Info Box -->
 <div id="visitor-stats-box" style="
   position: fixed;
